PCHR-2064: Adapt bootstrapcivihr to shoreditch theme

--- a/org.civicrm.bootstrapcivihr/scss/overrides/style/_panel.scss
+++ b/org.civicrm.bootstrapcivihr/scss/overrides/style/_panel.scss
@@ -27,7 +27,7 @@
 
         // An <hr> can serve as a separator
         > hr {
-            margin: $crm-panel-heading-big-padding;
+            margin: 15px 20px;
             margin-bottom: 0;
             margin-left: 0;
             margin-right: 0;
