--- a/org.civicrm.bootstrapcivihr/scss/civihr.scss
+++ b/org.civicrm.bootstrapcivihr/scss/civihr.scss
@@ -1,11 +1,11 @@
-@import "../../org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/variables";
-@import "../../org.civicrm.bootstrapcivicrm/scss/bootstrap/mixins/*";
+@import "SCSSROOT/org.civicrm.shoreditch/scss/bootstrap/overrides/variables";
+@import "SCSSROOT/org.civicrm.shoreditch/scss/bootstrap/mixins/ALL";
 
 @import "overrides/variables";
 
-@import "../../org.civicrm.bootstrap/scss/overrides/variables";
-@import "../../org.civicrm.bootstrap/scss/vendor/bootstrap/variables";
-@import "../../org.civicrm.bootstrap/scss/vendor/bootstrap/mixins";
+@import "SCSSROOT/org.civicrm.shoreditch/base/scss/overrides/variables";
+@import "SCSSROOT/org.civicrm.shoreditch/base/scss/vendor/bootstrap/variables";
+@import "SCSSROOT/org.civicrm.shoreditch/base/scss/vendor/bootstrap/mixins";
 
 @import "fonts/*";
 
