PCHR-2064: Fix panel-body bg for variations

--- a/org.civicrm.bootstrapcivihr/scss/overrides/style/_panel.scss
+++ b/org.civicrm.bootstrapcivihr/scss/overrides/style/_panel.scss
@@ -9,7 +9,7 @@
 .panel-default-inverted {
 
     > .panel-body {
-        background: $panel-default-heading-bg;
+        background: #ffffff;
     }
 
     > .panel-footer,
@@ -39,7 +39,7 @@
 .panel-default-plain {
 
     > .panel-body {
-        background: $panel-default-heading-bg;
+        background: #ffffff;
     }
 
     > .panel-footer {
