--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/toil.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/toil.html
@@ -2,7 +2,7 @@
   <div class="col-xs-12 form-horizontal">
     <div class="row">
       <label class="col-xs-4 control-label">Duration</label>
-      <div class="col-xs-4">
+      <div class="col-xs-4 chr_leave-request-modal__input-shift-left">
         <div class="chr_custom-select chr_custom-select--full">
           <select name="hours" ng-model="$ctrl.request.toilDurationHours"
             ng-disabled="$ctrl.isMode('view') || $ctrl.isRole('manager')"
