PCHR-1406: Don't Show Amount per Period if Empty
Contract Summary was showing literally "(0h per )" for 0 hours with empty
periodicity.  Fixed by showing the string only if hours amount is more than 0
and period is not empty.

--- a/hrjobcontract/views/contractSummary.html
+++ b/hrjobcontract/views/contractSummary.html
@@ -119,7 +119,7 @@
                 <div class="form-group">
                     <label class="col-sm-4 control-label">Hours</label>
                     <div class="col-sm-6">
-                        <p class="form-control-static">{{options.hour.hours_type[hour.hours_type]}}<span ng-if="hour.hours_amount"> ({{hour.hours_amount}}h per {{hour.hours_unit}})</span> <span ng-if="hour.fte_num > 0 && hour.fte_denom > 0">({{hour.fte_num}}/{{hour.fte_denom}}FTE)</span></p>
+                        <p class="form-control-static">{{options.hour.hours_type[hour.hours_type]}}<span ng-if="hour.hours_amount > 0 && hour.hours_unit"> ({{hour.hours_amount}}h per {{hour.hours_unit}})</span> <span ng-if="hour.fte_num > 0 && hour.fte_denom > 0">({{hour.fte_num}}/{{hour.fte_denom}}FTE)</span></p>
                     </div>
                     <div class="col-sm-2">
                         <a class="btn" role="button" ng-click="modalRevision('hour')">
