--- a/hrjobcontract/views/contractSummary.html
+++ b/hrjobcontract/views/contractSummary.html
@@ -127,17 +127,19 @@
                         </a>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label class="col-sm-4 control-label">Leave</label>
-                    <div class="col-sm-6">
-                        <p class="form-control-static">
-                            <span ng-repeat="leaveEntry in leave" ng-if="leaveEntry.leave_amount" class="subfield"><strong>{{options.leave.leave_type[leaveEntry.leave_type]}}:</strong> {{leaveEntry.leave_amount}} day(s)<br></span>
-                        </p>
-                    </div>
-                    <div class="col-sm-2">
-                        <a class="btn" role="button" ng-click="modalRevision('leave')">
-                            <span class="glyphicon glyphicon-time" aria-hidden="true"></span><br>
-                        </a>
+                <div ng-controller="FormLeaveCtrl as leaveCtrl">
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label">Leave</label>
+                        <div class="col-sm-6">
+                            <p class="form-control-static">
+                                <span ng-repeat="leaveEntry in leave" ng-if="leaveEntry.leave_amount" class="subfield"><strong>{{options.leave.leave_type[leaveEntry.leave_type]}}:</strong> {{leaveEntry.getEstimatedLeaveAmount(leaveCtrl.numberOfPublicHolidays)}} Days day(s)<br></span>
+                            </p>
+                        </div>
+                        <div class="col-sm-2">
+                            <a class="btn" role="button" ng-click="modalRevision('leave')">
+                                <span class="glyphicon glyphicon-time" aria-hidden="true"></span><br>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
