--- a/com.civicrm.hrjobroles/views/include/add_new_role.html
+++ b/com.civicrm.hrjobroles/views/include/add_new_role.html
@@ -35,16 +35,17 @@
                                                 </label>
                                                 <div class="col-xs-6">
                                                   <ui-select id="newContractId"
+                                                    prevent-animations
                                                     ng-model="jobroles.edit_data['new_role_id']['job_contract_id']"
                                                     theme="civihr-ui-select"
                                                     title="Choose a contract"
                                                     name="contract"
                                                     ng-required="true"
                                                     on-select="jobroles.onContractSelected($event)">
-                                                    <ui-select-match placeholder="Select a contract">
+                                                    <ui-select-match prevent-animations placeholder="Select a contract">
                                                       {{$select.selected.value.label}}
                                                     </ui-select-match>
-                                                    <ui-select-choices repeat="contract.value.id as (key,contract) in jobroles.contractsData | filter: { value: { label: $select.search }}">
+                                                    <ui-select-choices prevent-animations repeat="contract.value.id as (key,contract) in jobroles.contractsData | filter: { value: { label: $select.search }}">
                                                       <div ng-bind-html="contract.value.label | highlight: $select.search"></div>
                                                     </ui-select-choices>
                                                   </ui-select>
@@ -102,12 +103,13 @@
                                                 <label for="newLocation" class="col-xs-4 control-label">Location:</label>
                                                 <div class="col-xs-6">
                                                   <ui-select
+                                                    prevent-animations
                                                     ng-model="jobroles.edit_data['new_role_id']['location']"
                                                     theme="civihr-ui-select"
                                                     title="Choose a location"
                                                     name="newLocation">
-                                                    <ui-select-match allow-clear placeholder="Select a location">{{$select.selected.value.title}}</ui-select-match>
-                                                    <ui-select-choices repeat="location.value.value as (key,location) in jobroles.LocationsData | filter: { value: { title: $select.search }}">
+                                                    <ui-select-match prevent-animations allow-clear placeholder="Select a location">{{$select.selected.value.title}}</ui-select-match>
+                                                    <ui-select-choices prevent-animations repeat="location.value.value as (key,location) in jobroles.LocationsData | filter: { value: { title: $select.search }}">
                                                       <div ng-bind-html="location.value.title | highlight: $select.search"></div>
                                                     </ui-select-choices>
                                                   </ui-select>
@@ -117,12 +119,13 @@
                                                 <label for="newRegion" class="col-xs-4 control-label">Region:</label>
                                                 <div class="col-xs-6">
                                                   <ui-select
+                                                    prevent-animations
                                                     ng-model="jobroles.edit_data['new_role_id']['region']"
                                                     theme="civihr-ui-select"
                                                     title="Choose a Region"
                                                     name="newRegion">
-                                                    <ui-select-match allow-clear placeholder="Select a region">{{$select.selected.value.title}}</ui-select-match>
-                                                    <ui-select-choices repeat="region.value.value as (key,region) in jobroles.RegionsData | filter: { value: { title: $select.search }}">
+                                                    <ui-select-match prevent-animations allow-clear placeholder="Select a region">{{$select.selected.value.title}}</ui-select-match>
+                                                    <ui-select-choices prevent-animations repeat="region.value.value as (key,region) in jobroles.RegionsData | filter: { value: { title: $select.search }}">
                                                       <div ng-bind-html="region.value.title | highlight: $select.search"></div>
                                                     </ui-select-choices>
                                                   </ui-select>
@@ -132,11 +135,12 @@
                                                 <label for="newDepartment" class="col-xs-4 control-label">Department:</label>
                                                 <div class="col-xs-6">
                                                   <ui-select
+                                                    prevent-animations
                                                     ng-model="jobroles.edit_data['new_role_id']['department']"
                                                     theme="civihr-ui-select"
                                                     title="Choose a Department">
-                                                    <ui-select-match allow-clear placeholder="Select a department">{{$select.selected.value.title}}</ui-select-match>
-                                                    <ui-select-choices repeat="department.value.value as (key,department) in jobroles.DepartmentsData | filter: { value: { title: $select.search }}">
+                                                    <ui-select-match prevent-animations allow-clear placeholder="Select a department">{{$select.selected.value.title}}</ui-select-match>
+                                                    <ui-select-choices prevent-animations repeat="department.value.value as (key,department) in jobroles.DepartmentsData | filter: { value: { title: $select.search }}">
                                                       <div ng-bind-html="department.value.title | highlight: $select.search"></div>
                                                     </ui-select-choices>
                                                   </ui-select>
@@ -147,11 +151,12 @@
                                                 <label for="newLevel" class="col-xs-4 control-label">Level:</label>
                                                 <div class="col-xs-6">
                                                   <ui-select
+                                                    prevent-animations
                                                     ng-model="jobroles.edit_data['new_role_id']['level']"
                                                     theme="civihr-ui-select"
                                                     title="Choose a Level">
-                                                    <ui-select-match allow-clear placeholder="Select a level">{{$select.selected.value.title}}</ui-select-match>
-                                                    <ui-select-choices repeat="level.value.value as (key,level) in jobroles.LevelsData | filter: { value: { title: $select.search }}">
+                                                    <ui-select-match prevent-animations allow-clear placeholder="Select a level">{{$select.selected.value.title}}</ui-select-match>
+                                                    <ui-select-choices prevent-animations repeat="level.value.value as (key,level) in jobroles.LevelsData | filter: { value: { title: $select.search }}">
                                                       <div ng-bind-html="level.value.title | highlight: $select.search"></div>
                                                     </ui-select-choices>
                                                   </ui-select>
@@ -205,12 +210,14 @@
                                           <!--show ui-select for funder in edit mode-->
                                           <span ng-show="tableform.$visible">
                                             <ui-select class="funder-select"
+                                                prevent-animations
                                                 theme="civihr-ui-select"
                                                 ng-model="funder.funder_id">
-                                            <ui-select-match allow-clear class="ui-select-match">
+                                            <ui-select-match prevent-animations allow-clear class="ui-select-match">
                                               {{$select.selected.sort_name}}
                                             </ui-select-match>
                                             <ui-select-choices
+                                              prevent-animations
                                               class="ui-select-choices"
                                               repeat="contact in jobroles.contactList | filter: $select.search"
                                               refresh="jobroles.getContactList($select.search)"
