--- a/com.civicrm.hrjobroles/views/include/job_role_panel.html
+++ b/com.civicrm.hrjobroles/views/include/job_role_panel.html
@@ -88,15 +88,16 @@
                                                         <span ng-show="!editableForm.$visible"> {{jobroles.contractsData[jobroles.edit_data[job_roles_data.id]['job_contract_id']]['title'] || '-'}} </span>
                                                         <span ng-show="editableForm.$visible">
                                                           <ui-select
+                                                          prevent-animations
                                                           ng-model="jobroles.edit_data[job_roles_data.id]['job_contract_id']"
                                                           theme="civihr-ui-select"
                                                           title="Choose a contract"
                                                           on-select="jobroles.onContractEdited($data, job_roles_data.id)"
                                                           ng-required="true">
-                                                            <ui-select-match placeholder="Select a contract">
+                                                            <ui-select-match prevent-animations placeholder="Select a contract">
                                                               {{$select.selected.value.label}}
                                                             </ui-select-match>
-                                                            <ui-select-choices repeat="contract.value.id as (key,contract) in jobroles.contractsData | filter: { value: { label: $select.search }}">
+                                                            <ui-select-choices prevent-animations repeat="contract.value.id as (key,contract) in jobroles.contractsData | filter: { value: { label: $select.search }}">
                                                               <div ng-bind-html="contract.value.label | highlight: $select.search"></div>
                                                             </ui-select-choices>
                                                           </ui-select>
@@ -174,12 +175,13 @@
                                                       <span ng-show="!editableForm.$visible"> {{jobroles.LocationsData[jobroles.edit_data[job_roles_data.id]['location']]['title'] || '-'}}</span>
                                                       <span ng-show="editableForm.$visible">
                                                         <ui-select
+                                                        prevent-animations
                                                         ng-model="jobroles.edit_data[job_roles_data.id]['location']"
                                                         theme="civihr-ui-select"
                                                         name="newLocation"
                                                         title="Choose a location">
-                                                          <ui-select-match allow-clear placeholder="Select a location">{{$select.selected.value.title}}</ui-select-match>
-                                                          <ui-select-choices repeat="location.value.value as (key,location) in jobroles.LocationsData | filter: { value: { title: $select.search }}">
+                                                          <ui-select-match prevent-animations allow-clear placeholder="Select a location">{{$select.selected.value.title}}</ui-select-match>
+                                                          <ui-select-choices prevent-animations repeat="location.value.value as (key,location) in jobroles.LocationsData | filter: { value: { title: $select.search }}">
                                                             <div ng-bind-html="location.value.title | highlight: $select.search"></div>
                                                           </ui-select-choices>
                                                         </ui-select>
@@ -195,12 +197,13 @@
                                                       <span ng-show="!editableForm.$visible"> {{jobroles.RegionsData[jobroles.edit_data[job_roles_data.id]['region']]['title'] || '-'}} </span>
                                                       <span ng-show="editableForm.$visible">
                                                           <ui-select
+                                                          prevent-animations
                                                           ng-model="jobroles.edit_data[job_roles_data.id]['region']"
                                                           theme="civihr-ui-select"
                                                           name="newRegion"
                                                           title="Choose a Region">
-                                                            <ui-select-match allow-clear placeholder="Select a Region">{{$select.selected.value.title}}</ui-select-match>
-                                                            <ui-select-choices repeat="region.value.value as (key,region) in jobroles.RegionsData | filter: { value: { title: $select.search }}">
+                                                            <ui-select-match prevent-animations allow-clear placeholder="Select a Region">{{$select.selected.value.title}}</ui-select-match>
+                                                            <ui-select-choices prevent-animations repeat="region.value.value as (key,region) in jobroles.RegionsData | filter: { value: { title: $select.search }}">
                                                               <div ng-bind-html="region.value.title | highlight: $select.search"></div>
                                                             </ui-select-choices>
                                                           </ui-select>
@@ -217,12 +220,13 @@
                                                       <span ng-show="!editableForm.$visible"> {{jobroles.DepartmentsData[jobroles.edit_data[job_roles_data.id]['department']]['title'] || '-'}} </span>
                                                       <span ng-show="editableForm.$visible">
                                                           <ui-select
+                                                          prevent-animations
                                                           ng-model="jobroles.edit_data[job_roles_data.id]['department']"
                                                           theme="civihr-ui-select"
                                                           name="newDepartment"
                                                           title="Choose a Department">
-                                                            <ui-select-match allow-clear placeholder="Select a department">{{$select.selected.value.title}}</ui-select-match>
-                                                            <ui-select-choices repeat="department.value.value as (key,department) in jobroles.DepartmentsData | filter: { value: { title: $select.search }}">
+                                                            <ui-select-match prevent-animations allow-clear placeholder="Select a department">{{$select.selected.value.title}}</ui-select-match>
+                                                            <ui-select-choices prevent-animations repeat="department.value.value as (key,department) in jobroles.DepartmentsData | filter: { value: { title: $select.search }}">
                                                               <div ng-bind-html="department.value.title | highlight: $select.search"></div>
                                                             </ui-select-choices>
                                                           </ui-select>
@@ -238,12 +242,13 @@
                                                       <span ng-show="!editableForm.$visible"> {{jobroles.LevelsData[jobroles.edit_data[job_roles_data.id]['level']]['title'] || '-'}} </span>
                                                       <span ng-show="editableForm.$visible">
                                                         <ui-select
+                                                        prevent-animations
                                                         ng-model="jobroles.edit_data[job_roles_data.id]['level']"
                                                         theme="civihr-ui-select"
                                                         name="newLevel"
                                                         title="Choose a Level">
-                                                          <ui-select-match allow-clear placeholder="Select a level">{{$select.selected.value.title}}</ui-select-match>
-                                                          <ui-select-choices repeat="level.value.value as (key,level) in jobroles.LevelsData | filter: { value: { title: $select.search }}">
+                                                          <ui-select-match prevent-animations allow-clear placeholder="Select a level">{{$select.selected.value.title}}</ui-select-match>
+                                                          <ui-select-choices prevent-animations repeat="level.value.value as (key,level) in jobroles.LevelsData | filter: { value: { title: $select.search }}">
                                                             <div ng-bind-html="level.value.title | highlight: $select.search"></div>
                                                           </ui-select-choices>
                                                         </ui-select>
@@ -332,12 +337,14 @@
                                                   <!--show ui-select for funder in edit mode-->
                                                   <span ng-show="tableform.$visible">
                                                     <ui-select class="funder-select"
+                                                        prevent-animations
                                                         theme="civihr-ui-select"
                                                         ng-model="funder.funder_id">
-                                                    <ui-select-match allow-clear class="ui-select-match">
+                                                    <ui-select-match prevent-animations allow-clear class="ui-select-match">
                                                       {{$select.selected.sort_name}}
                                                     </ui-select-match>
                                                     <ui-select-choices
+                                                      prevent-animations
                                                       class="ui-select-choices"
                                                       repeat="contact in jobroles.contactList | filter: $select.search"
                                                       refresh="jobroles.getContactList($select.search)"
