--- a/hrjobcontract/views/modalForm.html
+++ b/hrjobcontract/views/modalForm.html
@@ -605,14 +605,17 @@
                                 <div class="col-sm-6">
                                     <div class="input-group">
                                         <ui-select
+                                                prevent-animations
                                                 allow-clear
                                                 ng-disabled="isDisabled"
                                                 ng-model="entity.health.provider">
                                             <ui-select-match
+                                                    prevent-animations
                                                     placeholder="Start typing a name or email...">{{$select.selected.label}}</ui-select-match>
                                             <ui-select-choices  repeat="contact.id as contact in contacts.Health_Insurance_Provider | filter: $select.search"
                                                                 refresh="refreshContacts($select.search, 'Health_Insurance_Provider')"
-                                                                refresh-delay="0">
+                                                                refresh-delay="0"
+                                                                prevent-animations>
                                                 <div ng-bind="contact.label"></div>
                                                 <small ng-bind="contact.description[0]"></small>
                                             </ui-select-choices>
@@ -678,14 +681,17 @@
                                 <div class="col-sm-6">
                                     <div class="input-group">
                                         <ui-select
+                                                prevent-animations
                                                 allow-clear
                                                 ng-disabled="isDisabled"
                                                 ng-model="entity.health.provider_life_insurance">
                                             <ui-select-match
+                                                    prevent-animations
                                                     placeholder="Start typing a name or email...">{{$select.selected.label}}</ui-select-match>
                                             <ui-select-choices  repeat="contact.id as contact in contacts.Life_Insurance_Provider | filter: $select.search"
                                                                 refresh="refreshContacts($select.search, 'Life_Insurance_Provider')"
-                                                                refresh-delay="0">
+                                                                refresh-delay="0"
+                                                                prevent-animations>
                                                 <div ng-bind="contact.label"></div>
                                                 <small ng-bind="contact.description[0]"></small>
                                             </ui-select-choices>
