--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
@@ -9,3 +9,4 @@ $select2-inner-background: #f1f5f6;
 $contact-avatar: 90px;
 
 $crm-checkbox-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2);
+$crm-form-layout-shadow: 0 3px 18px 0 rgba(48, 40, 40, 0.25);
