--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_view-contact.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_view-contact.scss
@@ -26,6 +26,10 @@
             padding: 5px 12px;
             line-height: 1.5em;
 
+            &.crm-custom-value-del {
+               background-color: $brand-danger;
+            }
+
             i {
               position: relative;
               bottom: 2px;
