--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_manage-groups.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_manage-groups.scss
@@ -1,14 +1,40 @@
 .page-civicrm-contact {
+
   #GroupContact {
 
     h3 {
-      padding: 20px;
+      padding: 0 20px;
       margin: 0;
-      background: $gray-lighter;
-      color: $gray-darker;
+      background: $brand-primary;
+      color: $crm-white;
       font-size: $font-size-h2;
       font-family: $font-family-base;
-      border-bottom: 1px solid $crm-background;
+      font-weight: 500;
+      border-bottom: 1px solid $brand-primary;
+      border-radius: 2px;
+      line-height: 50px;
+
+      &.status-removed {
+        background: $brand-danger;
+        color: $crm-white !important;
+        border-color: $brand-danger;
+      }
+    }
+
+    .dataTables_wrapper {
+
+      table {
+
+        tbody tr { 
+
+          td {
+
+              &:last-child {
+              text-align: right;
+            }
+          }
+        }
+      }
     }
 
     table {
@@ -18,6 +44,7 @@
 
       thead tr {
         border-bottom: 1px solid $crm-dark-grayblue;
+        line-height: 30px;
 
         th {
           border-bottom: none;
@@ -26,6 +53,14 @@
           vertical-align: middle;
           border: none;
           padding: 10px 20px;
+
+          &:first-child {
+            border-radius: 2px 0 0 0;
+          }
+
+          &:last-child {
+            border-radius: 2px 0 0 0;
+          }
 
           div {
             padding: 0;
@@ -37,6 +72,7 @@
         background: $crm-white;
         border-bottom: 1px solid $crm-background;
         border-right: none;
+        line-height: 30px;
 
         td {
           background: $crm-white;
@@ -44,8 +80,34 @@
           border: none;
           padding: 10px 20px;
 
+          &.bold {
+            font-weight: 600;
+          }
+
+          &.status-removed {
+            color: $brand-danger !important; 
+          }
+
           a {
             color: $brand-primary !important;
+
+            &.action-item {
+              padding: 3px 15px;
+            }            
+          }          
+        }
+
+        &:last-child {
+
+          td{
+
+            &:first-child {
+              border-radius: 0 0 0 4px;
+            }
+
+            &:last-child {
+              border-radius: 0 0 4px 0;
+            }
           }
         }
       }
@@ -55,17 +117,63 @@
     .accordion,
     .dataTables_wrapper {
       box-shadow: $box-shadow;
+       border-radius: 2px;
+       overflow: hidden;
+    }   
+
+    .accordion {
+
+      .ht-one {
+        height: 0;
+      }
+
+      .description {
+        margin: 0 22px 15px;
+      }
+
+      .crm-accordion-header {
+        border-radius: 3px 3px 0 0 !important;
+
+        .collapsed .crm-accordion-header {
+          border-radius: 3px !important;
+        }
+      }
+
+      .crm-accordion-body {
+        padding: 15px 0 !important;
+
+        .section-shown {
+          padding: 0;
+        }
+      }
     }
+
+    .crm-action-menu {
+
+      .select2-default {
+      
+        span.select2-chosen {
+          color: $crm-copy;
+
+          .crm-i {
+            display: none;
+          }
+        }
+      }
+    } 
 
     .description {
       margin: 15px;
+      font-family: $font-family-base;
     }
 
     #_qf_GroupContact_next {
       border: none;
-      line-height: 25px;
-      background: $brand-primary;
+      line-height: 27px;
+      height: 27px;
+      background: $brand-primary url(../../../../../i/plus-icon.png) 8px 11px no-repeat;
       text-shadow: unset;
+      padding: 1px 10px 3px 20px;
     }
 
     .select2-container {
@@ -74,7 +182,8 @@
       .select2-choice {
         background: none;
         border-radius: 2px;
-        line-height: 30px;
+        line-height: 28px;
+        font-family: $font-family-base;
         border: 1px solid $crm-darker-grayblue;
         box-shadow: $crm-select2-box-shadow-inset;
       }
