AI:83: Fix suggested issues in PR

--- a/org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/_variables.scss
@@ -126,6 +126,7 @@ $padding-base-horizontal: 10px !default;
 
 $border-radius-base:  2px !default;
 $border-radius-small: $border-radius-base !default;
+$border-radius-child: 4px !default;
 
 
 //== Tables
