--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_manage-groups.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_manage-groups.scss
@@ -1,9 +1,9 @@
 .page-civicrm-contact {
-
   #GroupContact {
 
     h3 {
-      padding: 0 20px;
+      padding-right: 20px;
+      padding-left: 20px;
       margin: 0;
       background: $brand-primary;
       color: $crm-white;
@@ -11,7 +11,7 @@
       font-family: $font-family-base;
       font-weight: 500;
       border-bottom: 1px solid $brand-primary;
-      border-radius: 2px;
+      border-radius: $border-radius-small;
       line-height: 50px;
 
       &.status-removed {
@@ -22,16 +22,10 @@
     }
 
     .dataTables_wrapper {
-
       table {
-
-        tbody tr { 
-
-          td {
-
-              &:last-child {
-              text-align: right;
-            }
+        tbody tr {
+          td:last-child {
+            text-align: right;          
           }
         }
       }
@@ -55,11 +49,11 @@
           padding: 10px 20px;
 
           &:first-child {
-            border-radius: 2px 0 0 0;
+            border-radius: $border-radius-small 0 0 0;
           }
 
           &:last-child {
-            border-radius: 2px 0 0 0;
+            border-radius: $border-radius-small 0 0 0;
           }
 
           div {
@@ -98,15 +92,13 @@
         }
 
         &:last-child {
-
           td{
-
             &:first-child {
-              border-radius: 0 0 0 4px;
+              border-radius: 0 0 0 $border-radius-child;
             }
 
             &:last-child {
-              border-radius: 0 0 4px 0;
+              border-radius: 0 0 $border-radius-child 0;
             }
           }
         }
@@ -117,12 +109,11 @@
     .accordion,
     .dataTables_wrapper {
       box-shadow: $box-shadow;
-       border-radius: 2px;
+       border-radius: $border-radius-small;
        overflow: hidden;
     }   
 
     .accordion {
-
       .ht-one {
         height: 0;
       }
@@ -132,10 +123,10 @@
       }
 
       .crm-accordion-header {
-        border-radius: 3px 3px 0 0 !important;
+        border-radius: $panel-border-radius $panel-border-radius 0 0 !important;
 
         .collapsed .crm-accordion-header {
-          border-radius: 3px !important;
+          border-radius: $panel-border-radius !important;
         }
       }
 
@@ -148,16 +139,12 @@
       }
     }
 
-    .crm-action-menu {
+    .crm-action-menu .select2-default {      
+      span.select2-chosen {
+        color: $crm-copy;
 
-      .select2-default {
-      
-        span.select2-chosen {
-          color: $crm-copy;
-
-          .crm-i {
-            display: none;
-          }
+        .crm-i {
+          display: none;
         }
       }
     } 
