--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-price-set.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-price-set.scss
@@ -53,15 +53,65 @@
         }
       }
     }
+   
+    #field_page, #option11_wrapper {
+      position: relative;
+
+      &:before{
+        box-shadow: $crm-form-layout-shadow;
+        content: "";
+        height: 100%;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        z-index: -1;
+      }
+    }   
+
+    .action-link {
+      background: $crm-white !important;
+      padding: 20px !important; 
+    }
 
     .dataTables_wrapper {
       overflow: visible;
-    }
+    }    
 
-    #option11,
+    #option11, #option12, #option13,
     #options {
       @include mx-expandable-table();
       box-shadow: none !important;
+
+      th {       
+        border-bottom-color: $crm-dialog-container-border !important;
+        
+        &:first-child {
+          padding-left: 20px !important;
+        }       
+
+      }
+
+      tr td {
+        &:first-child {
+          padding-left: 20px !important;
+        }
+
+      }
+
+      .crmf-title {
+        padding-left: 20px;
+      }
+
+      td:last-child {
+        text-align: right;
+        padding-right: 20px;
+      }
+
+      .action-item {
+        text-transform: none;
+      }
+
     }
   }
 
