AI-58: Fix Fix table rows issue

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
@@ -130,7 +130,7 @@
       vertical-align: middle !important;
       border: none !important;
       padding: 10px !important;
-      line-height: 1.9em;
+      line-height: 30px;
 
       div {
         padding: 0;
@@ -163,7 +163,7 @@
         border: none !important;
         color: $gray-dark;
         padding: 10px;
-        line-height: 1.9em;
+        line-height: 30px;
         vertical-align: middle;
       }
 
