AI-64: Fix footer shadow issue

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_modals.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_modals.scss
@@ -109,7 +109,7 @@
   .ui-dialog-buttonpane {
     @extend .modal-footer, %open-sans-font-family;
     background: $gray-lighter;
-    box-shadow: $crm-modal-footer-shadow;
+    box-shadow: none;
     margin-top: 0;
     display: block;
 
