--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
@@ -10,3 +10,7 @@ $contact-avatar: 90px;
 
 $crm-checkbox-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2);
 $crm-form-layout-shadow: 0 3px 18px 0 rgba(48, 40, 40, 0.25);
+$crm-contribute-form-shadow: 0 0 16px 1px rgba(0, 0, 0, 0.1);
+
+$crm-blue-light: #58b7d1;
+$crm-cancel-color: #555;
