--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
@@ -39,10 +39,10 @@
   }
 
   .CRM_Contribute_Form_Task_Delete {
-    box-shadow: $crm-contribute-form-shadow;
     background: $crm-white;
-    margin-top: 15px;
     border-radius: $border-radius-small;
+    box-shadow: $crm-contribute-form-shadow;
+    margin-top: 15px;
 
     + p {
       margin: 0;
@@ -50,21 +50,21 @@
 
     .form-item {
       background: $crm-white;
+      border-radius: 0;
       border-top: 1px solid $gray-lighter;
       margin: 20px 20px 0;
-      padding: 20px 0 10px;
       min-height: 43px;
-      border-radius: 0;
+      padding: 20px 0 10px;
     }
 
     .crm-form-submit {
       background: $brand-primary;
       border-color: $brand-primary;
-      color: $crm-white;;
+      color: $crm-white;
+      float: left;
       min-width: 60px;
       padding: 8px 12px;
       text-shadow: none;
-      float: left;
 
       &:hover {
         background: $crm-blue-light;
