AI-80: Fix add new contact record issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
@@ -525,7 +525,13 @@
       input.dateplugin {
         border-color: $crm-darker-grayblue;
         margin-top: 0;
-      }      
+      }
+
+      input[type=radio] {
+        &:checked + label[for]:after {
+          top: 7px;
+        }
+      }  
     } 
 
     &#CustomData input[type=radio] {
